<resources>
    <string name="app_name">Gomel Tour</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out__confirm_title">Sign Out</string>
    <string name="sign_out_confirm_msg">Are you sure you want to sign out?</string>

    <string name="fish_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="fish_short">Lorem ipsum dolor sit amet</string>
    <string name="fish_email" translatable="false">example.one@server.org</string>
    <string name="fish_full_name">John Doe</string>
    <string name="events_list_title">Events</string>
    <string name="predict_title_label">Short title</string>
    <string name="predict_text_label">Prediction text</string>
    <string name="form_hint_answer">Answer %1$s</string>
    <string name="form_remove_selected_answer_error">Answer that is selected cannot be removed.</string>
    <string name="create_predict_title">New</string>
    <string name="form_option_positive">Yes</string>
    <string name="form_option_negative">No</string>
    <string name="fish_date_full">Mon, 25 Oct 2017</string>
    <string name="fish_date_short">October 25</string>
    <string name="fish_time_short">12:30</string>
    <string name="place_none">\?????????</string>

    <string name="btn_confirm_sign_out">Confirm</string>
    <string name="it_events">Events</string>
    <string name="it_museums">Museums</string>
    <string name="it_achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="fish_number">12.6k</string>
    <string name="filter_empty_result">No predictions matching your filter</string>
    <string name="add_predict_cta">Predict</string>
    <string name="label_fulfills_on">Fulfills on</string>
    <string name="label_open_till">Open till</string>
    <string name="confirm_cancel_title">Confirm</string>
    <string name="confirm_cancel_message">Are you sure you want to discard your changes?</string>
    <string name="confirm_btn_stay">No, Stay</string>

    <string name="error_loading">Error loading data</string>
    <string name="error_no_data">No data</string>

    <string name="votes_thousand">k</string>
    <string name="votes_million">m</string>
    <string name="votes_billion">b</string>
    <string name="votes_trillion">tr</string>

    <integer name="max_answers">7</integer>
    <integer name="min_answers">2</integer>
    <integer name="option_positive">0</integer>
    <integer name="option_negative">1</integer>
    <integer name="fragment_transition_duration">250</integer>
</resources>
