<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="by.gomeltour.presentation.ui.main.BottomOptionsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:id="@+id/blockOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> model.openSettings()}"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_settings_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/settings"
                android:textSize="16sp" />
        </LinearLayout>

        <by.gomeltour.presentation.views.ConfirmMenuItemView
            android:id="@+id/itemConfirmSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:negativeButton="@android:string/cancel"
            app:positiveButton="@string/btn_confirm_sign_out"
            app:text="@string/sign_out" />
    </LinearLayout>
</layout>