<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data class="AccountsBinding">

        <variable
            name="model"
            type="by.gomeltour.presentation.ui.profile.AccountsViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:onClick="@{(view) -> model.onAccountPressed()}"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgAuthorPic"
                avatarUrl="@{model.user.photoUrl}"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_person_default_24" />

            <TextView
                android:id="@+id/txtAuthorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{model.user.name}"
                android:textColor="@color/md_black_1000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/imgAuthorPic"
                app:layout_constraintTop_toTopOf="@id/imgAuthorPic"
                tools:text="@string/fish_full_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@{model.user.email}"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/imgAuthorPic"
                app:layout_constraintStart_toStartOf="@id/txtAuthorName"
                tools:text="@string/fish_email" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/separator"
            style="@style/DividerLight"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:id="@+id/blockPreferences"
            style="@style/Clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> model.onPreferencesPressed()}"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:alpha="0.8"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_settings_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/md_black_1000"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/settings"
                android:textSize="16sp" />
        </LinearLayout>

        <by.gomeltour.presentation.views.ConfirmMenuItemView
            android:id="@+id/itemConfirmSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:negativeButton="@android:string/cancel"
            app:positiveButton="@string/btn_confirm_sign_out"
            app:text="@string/sign_out" />
    </LinearLayout>
</layout>