<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/rlPredict"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/txtPredictTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fish_short"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtPredictText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/fish_text"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/txtPredictTitle" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgAuthorPic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_stub_icon_24"
                app:layout_constraintTop_toBottomOf="@id/txtPredictText" />

            <TextView
                android:id="@+id/txtAuthorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/fish_short"
                android:textColor="@color/md_black_1000"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/imgAuthorPic"
                app:layout_constraintTop_toTopOf="@id/imgAuthorPic" />

            <TextView
                android:id="@+id/txtCreateDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fish_date_full"
                app:layout_constraintBottom_toBottomOf="@id/imgAuthorPic"
                app:layout_constraintStart_toStartOf="@id/txtAuthorName" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>