<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="ItemEventBinding">

        <variable
            name="model"
            type="by.gomeltour.presentation.ui.event.list.ItemEventViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingBottom="8dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:onClick="@{(view) -> model.onSelectItem()}"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_poster"
                    posterUrl="@{model.event.titleImageUrl}"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="center"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@sample/poster_sample.jpg" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/act_padding_h"
                    android:paddingEnd="@dimen/act_padding_h"
                    android:paddingBottom="@dimen/act_padding_v">

                    <TextView
                        android:id="@+id/txt_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@{model.event.title}"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/fish_short" />

                    <View
                        android:id="@+id/divider_datetime"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:alpha="0.12"
                        android:background="@color/md_black_1000"
                        app:layout_constraintTop_toBottomOf="@id/txt_title" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@id/divider_datetime">

                        <TextView
                            android:id="@+id/txt_time_start"
                            timeShort="@{model.event.timeStart}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/fish_time_short" />

                        <TextView
                            android:id="@+id/txt_dash_time"
                            visible="@{model.event.timeEnd != null}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="-"
                            android:textSize="16sp"
                            app:layout_constraintStart_toEndOf="@id/txt_time_start"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txt_time_end"
                            timeShort="@{model.event.timeEnd}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:textSize="16sp"
                            app:layout_constraintStart_toEndOf="@id/txt_dash_time"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/fish_time_short" />

                        <TextView
                            android:id="@+id/txt_date_start"
                            dateShort="@{model.event.dateStart}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toStartOf="@id/txt_date_dash"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/fish_date_short" />

                        <TextView
                            android:id="@+id/txt_date_dash"
                            visible="@{model.event.dateEnd != null}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:text="-"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toStartOf="@id/txt_date_end"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txt_date_end"
                            dateShort="@{model.event.dateEnd}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/fish_date_short" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
</layout>